kubernetes/apps/base/tailscale-up/tsflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-adder-tsflow
spec:
  selector:
    app.kubernetes.io/name: sheep-adder-tsflow
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
