kubernetes/apps/base/tailscale-up/tsflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sheep-adder-tsflow
  annotations:
    tailscale.com/proxy-group: common-ingress
    tailscale.com/tags: tag:k8s
spec:
  defaultBackend:
    service:
      name: sheep-adder-tsflow
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - sheep-adder-tsflow
